--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-MONGODB_USER=artuhovaela4
-MONGODB_PASSWORD=Nt7UzBfqGVVa7s3W
-MONGODB_URL=cluster0.dqdt2.mongodb.net  
-MONGODB_DB=Cluster0
-PORT=3000
-NODE_ENV=production
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
+PORT=
