--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0"
